Fixing overflow issue with rotated players.

--- a/FootballField/WebContent/css/styles.css
+++ b/FootballField/WebContent/css/styles.css
@@ -90,4 +90,5 @@ img{
 body{
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
